tests/errors/test_02.xpp
// Invalid main function signature

fn main(haha: bool) void {
}
